sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: not found: value inverse
	inverse=false
        ^AlgBubbleSort1:14: error: not found: value inverse
			inverse=true
                        ^AlgBubbleSort1:19: error: not found: value inverse
	} while(inverse)
                ^